--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,15 @@
     {% endif %}
   </title>
 
+  <!-- twitter -->
+  <meta name="keywords" content="interview, professional, indonesia, wawancara" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@PakeApaID" />
+  <meta name="twitter:site" content="@PakeApaID" />
+  <meta name="twitter:title" content="pakeapa?" />
+  <meta name="twitter:description" content="Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done." />
+  <meta name="twitter:image" content="https://pakeapa.com/wp-content/uploads/2015/06/logo-pakeapa1.png" />
+
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
@@ -23,7 +32,8 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/public/favicon.ico">
+  <!-- <link rel="shortcut icon" href="/public/favicon.ico"> -->
+  <link rel="shortcut icon" href="/images/sites/logo-pakeapa-e1434457392280.png"/>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
@@ -53,7 +63,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-XXXXXXX-X', 'auto');
+  ga('create', 'UA-59943855-1', 'auto');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
