--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,9 +5,9 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <a href="{{ site.author.gravatar }}" title="View on Gravatar" class="codinfox-profile-photo">
-      <img src="{{ site.author.photo }}" alt="Gravatar"/>
-    </a>
+    <!-- <a href="{{ site.author.gravatar }}" title="View on Gravatar" class="codinfox-profile-photo"> -->
+      <img src="images/sites/logo-pakeapa.png" alt="Gravatar"/>
+    <!-- </a> -->
     <p>{{ site.author.introduction }}</p>
   </div>
 
@@ -28,14 +28,10 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Fork me on Github</a>
-<!--     <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }} Codinfox. This work is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
     </p>
   </div>
   <div class="sidebar-item">
