--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="/" title="Home">
-              <img src="/public/logo.png" class="codinfox-logo" />
+              pakeapa
             </a>
             <small>{{ site.tagline }}</small>
           </h3>
