--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="description" content="{{ site.description }}">
+  
+  <meta charset="utf-8">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#f4f5f6">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#f4f5f6">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -22,37 +28,53 @@
   <meta name="twitter:site" content="@PakeApaID" />
   <meta name="twitter:title" content="pakeapa?" />
   <meta name="twitter:description" content="Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done." />
-  <meta name="twitter:image" content="https://pakeapa.com/wp-content/uploads/2015/06/logo-pakeapa1.png" />
+  <meta name="twitter:image" content="http://pakeapa.com/images/sites/logo-pakeapa.png" />
+  
+  <!-- facebook -->
+  <meta property="og:description" content="Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done.">
+  <meta property="og:image" content="http://pakeapa.com/images/sites/logo-pakeapa.png">
+  <meta property="og:locale" content="id">
+  <meta property="og:site_name" content="Pakeapa.com | interview dengan professional.">
+  <meta property="og:title" content="Pakeapa? | setup/tips/interview">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://pakeapa.com/">
+  <meta property="article:section" content="website">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/public/css/poole.css">
+  <!-- <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
-  <link rel="stylesheet" href="/public/css/codinfox.css">
+  <link rel="stylesheet" href="/public/css/codinfox.css"> -->
+  <link rel="stylesheet" href="/public/css/milligram.min.css">
+  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
   <!-- <link rel="shortcut icon" href="/public/favicon.ico"> -->
   <link rel="shortcut icon" href="/images/sites/logo-pakeapa-e1434457392280.png"/>
+  
+  <link rel="canonical" href="http://pakeapa.com/">
+  <link rel="image_src" href="http://pakeapa.com/images/sites/logo-pakeapa.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <script type="text/x-mathjax-config">
-
- MathJax.Hub.Config({
-     jax: ["input/TeX","output/SVG"],
-     extensions: ["tex2jax.js","mml2jax.js","MathMenu.js","MathZoom.js"],
-     TeX: {
-         extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
-     },
-     tex2jax: {
-         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-         processEscapes: true
-     }
- });
-
- </script>
+   MathJax.Hub.Config({
+       jax: ["input/TeX","output/SVG"],
+       extensions: ["tex2jax.js","mml2jax.js","MathMenu.js","MathZoom.js"],
+       TeX: {
+           extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
+       },
+       tex2jax: {
+           inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+           processEscapes: true
+       }
+   });
+   </script>
 
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
 <script>
