--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,65 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   {% include head.html %}
+  <body>
+    <main class="wrapper">
 
-  <body class="theme-base-0d layout-reverse">
+      <nav class="navigation">
+        <section class="container">
+          <a class="navigation-title float-left" href="http://pakeapa.com/">
+            <h1 >Pakeapa | <small>{{ site.tagline }}</small> </h1>
+          </a>
+          <ul class="navigation-list float-right">
+            <li class="navigation-item">
+              <a class="navigation-link" href="/about/">About</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="/archive/">Archives</a>
+            </li>
+          </ul>
+        </section>
+      </nav>
 
-    {% include sidebar.html %}
-
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="/" title="Home">
-              pakeapa
-            </a>
-            <small>{{ site.tagline }}</small>
-          </h3>
-        </div>
-        <!-- <div class="codinfox-masthead-bg"></div> -->
-      </div>
-
-      <div class="container content">
+      <section class="container" id="post-content">
         {{ content }}
-      </div>
-    </div>
+      </section>
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-<!-- Disqus Embeded -->
-    <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'yourname'; // required: replace example with your forum shortname
+      <footer class="footer">
+        <section class="container">
+          <p>pakeapa.com | dedenf</p>
+        </section>
+      </footer>
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-    </script>
+    </main>
 
-    <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
-
-        document.addEventListener('click', function(e) {
-          var target = e.target;
-
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
-
-          checkbox.checked = false;
-        }, false);
-      })(document);
-    </script>
-
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
+    <script src="http://milligram.github.io/js/script.js"></script>
   </body>
 </html>
