--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,13 @@
   {% include head.html %}
   <body>
     <main class="wrapper">
-
       <nav class="navigation">
         <section class="container">
+
           <a class="navigation-title float-left" href="http://pakeapa.com/">
-            <h1 >Pakeapa | <small>{{ site.tagline }}</small> </h1>
+            <h1 class="title">Pakeapa</h1>
           </a>
+
           <ul class="navigation-list float-right">
             <li class="navigation-item">
               <a class="navigation-link" href="/about/">About</a>
