update on content, remove more comment and reduce the width of the posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <section class="container">
 
           <a class="navigation-title float-left" href="{{ site.url }}">
-            <h1 class="title">Pakeapa<small></small></h1>
+            <h1 class="title">Pakeapa</h1>
           </a>
 
           <ul class="navigation-list float-right">
