change heavily on styles, add Ario Pratomo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date" style="display:inline-block;">{{ page.date | date_to_string }}</span>
+  <span class="post-date" style="display:inline-block;">{{ page.date | date_to_long_string }}</span>
   {{ content }}
 
   {% for tag in page.tags %}
