--- a/public/css/style-.css
+++ b/public/css/style-.css
@@ -25,7 +25,9 @@
 
 /* Base
 // –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
+body{
+	font-size: 1.1em;
+}
 img {
 	max-width: 100%;
 }
@@ -606,8 +608,9 @@ pre.prettyprint.lang-md * { color: #655d5d !important; }
 .post-date {
   display: block;
   margin-top: -.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: .8rem;
   color: #9a9a9a;
+  font-size: .9em;
 }
 
 /* Related posts */
@@ -713,5 +716,14 @@ img {
 
 
 /*type face*/
-h5{font-size: 2rem;}
+h1.post-title{
+	font-size: 1.3em;
+	margin-bottom: .3em;
+}
+time.post-date{
+	font-size: .8em;
+}
+h5{
+	font-size: 1.8rem;
+}
 .tags {text-decoration: underline;font-size: 1.2em;}
