--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="description" content="{{ site.description }}">
+  {% if page.desc %}<meta name="description" content="{{ page.title }} - {{ site.description }}">{% else %}<meta name="description" content="{{ site.description }}">{% endif %}
   
   <meta charset="utf-8">
   <meta name="robots" content="index, follow">
@@ -26,13 +26,19 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:creator" content="@PakeApaID" />
   <meta name="twitter:site" content="@PakeApaID" />
-  <meta name="twitter:title" content="pakeapa?" />
-  <meta name="twitter:description" content="Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done." />
+  {% if page.desc %}<meta name="twitter:title" content="{{ page.title }}">{% else %}<meta name="twitter:title" content="pakeapa?" />{% endif %}
+  {% if page.desc %}<meta name="twitter:description" content="{{ page.desc }} - {{ site.description }}">{% else %}
+  <meta name="twitter:description" content="{{ site.description}}" />
+  {% endif %}
+  {% if page.image %}<meta name="twitter:image" content="{{ site.url }}{{ page.image }}" />{% else %}
   <meta name="twitter:image" content="http://pakeapa.com/images/sites/logo-pakeapa.png" />
+  {% endif %}
   
   <!-- facebook -->
-  <meta property="og:description" content="Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done.">
-  <meta property="og:image" content="http://pakeapa.com/images/sites/logo-pakeapa.png">
+  {% if page.desc %}<meta property="og:description" content="{{ page.desc }} - {{ site.description }}">{% else %}
+  <meta property="og:description" content="{{ site.description }}">{% endif %}
+  {% if page.image %}<meta property="og:image" content="{{ site.url }}{{ page.image }}" />{% else %}
+  <meta property="og:image" content="http://pakeapa.com/images/sites/logo-pakeapa.png">{% endif %}
   <meta property="og:locale" content="id">
   <meta property="og:site_name" content="Pakeapa.com | interview dengan professional.">
   <meta property="og:title" content="Pakeapa? | setup/tips/interview">
@@ -56,7 +62,8 @@
   <link rel="image_src" href="http://pakeapa.com/images/sites/logo-pakeapa.png">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.name }} ATOM" href="/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.name }} RSS" href="/feed.xml" />
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
