--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
       <footer class="footer">
         <section class="container">
-          <p>pakeapa.com | <a href="https://twitter.com/dedenf">dedenf</a></p>
+          <p>pakeapa.com</p>
         </section>
       </footer>
 
